--- a/package.json
+++ b/package.json
@@ -1,19 +1,29 @@
 {
-  "name": "backend-lab-11",
+  "name": "auth0TestBack",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js "
+    
   },
+  "engines": {
+    "node": "14.20.1"
+  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-jwt": "^8.4.1",
-    "jwks-rsa": "^3.1.0",
-    "mongoose": "^7.6.2"
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
+    "jsonwebtoken": "^9.0.0",
+    "jwks-rsa": "^3.0.1",
+    "mongodb": "^4.17.1",
+    "mongoose": "^6.11.1"
   }
+  
 }
